--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ scripts/docker/output/
 
 # UAPI header generated for libbpf package-based builds
 src/cc/compat/linux/bpf.h
+
+# Test Files
+*.txt
